# Renascence

./: .gitignore  CMakeLists.txt  GP_MAIN  Hmacro.py  Makefile  Map-Reduce.xml  README.md  changeTab.sh  config.py  config.txt  doc.txt  func.xml  funcV2.xml  func_status_model.py  graphic_test.xml  install.sh  main.cpp  make.self  mgpfunc.xml  newMake.py  parallel_examply.py  path.conf  pymake.py  re_python_example.py  result.xml  simple_main.cpp  stream_test.xml  test_speed_mgp.cpp  tree_result.xml  userguide.txt
GPSuit/: FilePath.cpp  FilePath.h  main.cpp
db/: function.table  status.table
doc/: Map-Reduce.txt  Parallel.txt  ParallelMachine.txt  TODOList.txt  doc.txt  formula.txt  tools.txt  userguide.txt
goapi/: test.go
gpsuit/: input1.xml  inputTable.txt  outputTable.txt  standard.xml
gptool/: main.cpp
include/: GPStrings.h  head.h
java/: Makefile  build_source.sh  config.txt
jni/: Android.mk  Application.mk
output/: doc.txt  result.txt
proto/: GPDAG.pb-c.c  GPDAG.pb-c.h  GPDAG.proto  Lib.pb-c.c  Lib.pb-c.h  Lib.proto
res/: function_source.txt  license
src/: GPStrings.cpp
swig/: renascence_basic.i
test/: AbstractPointTest.cpp  AbstractPointTest.h  GPAPITest.cpp  GPAdaptorTest.cpp  GPBackEndTest.cpp  GPBasicPiecesFunctionCreatorTest.cpp  GPCarryVaryGroupTest.cpp  GPFormulaADFTest.cpp  GPFormulaTest.cpp  GPFormulaTreeTest.cpp  GPFrontEndProducerTest.cpp  GPFrontEndTest.cpp  GPGPDataTest.cpp  GPGPDataTest.xml  GPGoldenDividerTest.cpp  GPGraphicTest.cpp  GPMidEndTest.cpp  GPMultiLayerTreeTest.cpp  GPMultiOutputTest.cpp  GPNetSearchTest.cpp  GPPSOTest.cpp  GPParallelTest.cpp  GPPiecesFunctionFactoryTest.cpp  GPSearchIOTest.cpp  GPSingleFunctionOptTest.cpp  GPSingleParallelMachineTest.cpp  GPSingleTreeTest.cpp  GPStreamADFTest.cpp  GPTest.cpp  (+12 more)
(+511 files in other folders)
